(feat): Implementar pagina de registro

--- a/src/frontend/index.html
+++ b/src/frontend/index.html
@@ -5,9 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>MentorIA - Inicio</title>
         <script src="script.js"></script>
-        <link
-            href="https://cdn.boxicons.com/fonts/basic/boxicons.min.css"
-            rel="stylesheet" />
+        <link href="https://cdn.boxicons.com/fonts/basic/boxicons.min.css" rel="stylesheet" />
         <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
     </head>
     <body class="bg-[#0C0C1C] text-[#A3B5CD] p-2 sm:p-4 min-h-screen h-[100vh]">
@@ -18,67 +16,49 @@
             </div>
             <nav>
                 <ul class="flex gap-5">
-                    <a
-                        class="p-2 px-8 rounded-lg border-[#A3B5CD] border-1"
-                        href="login.html"
-                        ><li>Iniciar sesión</li></a
-                    >
-                    <a
-                        class="p-2 px-8 rounded-lg border-[#A3B5CD] bg-[#161B32]"
-                        href="registro.html"
-                        ><li>Registrarse</li></a
-                    >
+                    <a class="p-2 px-8 rounded-lg border-[#A3B5CD] border-1" href="login.html"><li>Iniciar sesión</li></a>
+                    <a class="p-2 px-8 rounded-lg border-[#A3B5CD] bg-[#161B32]" href="registro.html"><li>Registrarse</li></a>
                 </ul>
             </nav>
         </header>
 
         <main class="flex justify-around">
             <div class="w-[90vh] mt-20">
-                <h2
-                    class="leading-normal text-5xl 2xl:text-7xl 2xl:mb-40 text-center mb-20">
+                <h2 class="leading-normal text-5xl 2xl:text-7xl 2xl:mb-40 text-center mb-20">
                     El
-                    <span class="font-black text-[#8E94E5]">mejor</span> lugar
-                    para
-                    <span class="font-black text-[#8E94E5]">estudiar</span> con
+                    <span class="font-black text-[#8E94E5]">mejor</span>
+                    lugar para
+                    <span class="font-black text-[#8E94E5]">estudiar</span>
+                    con
                     <span class="font-black text-[#8E94E5]">IA</span>
                 </h2>
 
                 <!-- Botones principales -->
                 <div class="flex gap-5 justify-center mb-5">
-                    <div
-                        class="w-48 p-2 bg-[#161B32] text-[#A3B5CD] border-1 rounded-lg text-center">
-                        <button type="button">Iniciar sesión</button>
-                    </div>
-                    <div
-                        class="w-48 p-2 text-[#A3B5CD] border-1 rounded-lg text-center">
-                        <button type="button">Registrarse</button>
-                    </div>
+                    <a href="login.html">
+                        <div class="w-48 p-2 bg-[#161B32] text-[#A3B5CD] border-1 rounded-lg text-center">
+                            <p>Iniciar sesión</p>
+                        </div>
+                    </a>
+                    <a href="registro.html">
+                        <div class="w-48 p-2 text-[#A3B5CD] border-1 rounded-lg text-center">
+                            <p>Registrarse</p>
+                        </div>
+                    </a>
                 </div>
 
                 <!-- Botón GitHub -->
                 <div class="w-80 m-auto">
-                    <a
-                        href="https://github.com/LuisangelSS/MentorIA-/"
-                        target="_blank"
-                        rel="noopener noreferrer"
-                        class="flex m-auto justify-center gap-2 p-2 bg-[#8E94E5] text-[#161B32] rounded-lg cursor-pointer hover:bg-[#7b82d9] transition-colors">
-                        <img
-                            src="assets/svg/github-mark.svg"
-                            alt="GitHub Logo"
-                            class="w-5 h-5 mt-1" />
-                        <span class="font-bold"
-                            >Star this project on GitHub</span
-                        >
+                    <a href="https://github.com/LuisangelSS/MentorIA-/" target="_blank" rel="noopener noreferrer" class="flex m-auto justify-center gap-2 p-2 bg-[#8E94E5] text-[#161B32] rounded-lg cursor-pointer hover:bg-[#7b82d9] transition-colors">
+                        <img src="assets/svg/github-mark.svg" alt="GitHub Logo" class="w-5 h-5 mt-1" />
+                        <span class="font-bold">Star this project on GitHub</span>
                     </a>
                 </div>
             </div>
 
             <!-- Imagen lateral -->
             <div>
-                <img
-                    src="assets/png/ilustracion 1.png"
-                    alt=""
-                    class="h-[65vh] mt-18" />
+                <img src="assets/png/ilustracion 1.png" alt="" class="h-[65vh] mt-18" />
             </div>
         </main>
     </body>
