--- a/src/frontend/registro.html
+++ b/src/frontend/registro.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>MentorIA - Registro</title>
         <link href="https://cdn.boxicons.com/fonts/basic/boxicons.min.css" rel="stylesheet" />
-        <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+        <link rel="stylesheet" href="css/style.css">
     </head>
     <body class="bg-[#0C0C1C] text-[#A3B5CD] p-2 sm:p-4 min-h-screen h-[100vh]">
         <!-- Header  -->
