--- a/src/frontend/login.html
+++ b/src/frontend/login.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>MentorIA - Login</title>
     <link href="https://cdn.boxicons.com/fonts/basic/boxicons.min.css" rel="stylesheet" />
-    <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body class="bg-[#0C0C1C] text-[#A3B5CD] p-4 min-h-screen flex flex-col justify-center">
     <!-- Header -->
