(feat) Agregar favicon a las diferentes paginas

--- a/src/frontend/app.html
+++ b/src/frontend/app.html
@@ -6,6 +6,8 @@
     <title>MentorIA</title>
     <link href='https://cdn.boxicons.com/fonts/basic/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="shortcut icon" href="assets/svg/logo.svg" type="image/x-png">
+
 
 </head>
 <body class="bg-[#0C0C1C] text-[#A3B5CD] p-2 sm:p-4 min-h-screen">
