--- a/src/frontend/index.html
+++ b/src/frontend/index.html
@@ -10,6 +10,7 @@
         <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
         <link href="https://cdn.boxicons.com/fonts/basic/boxicons.min.css" rel="stylesheet" />
         <link rel="stylesheet" href="css/style.css" />
+        <link rel="shortcut icon" href="assets/svg/logo.svg" type="image/x-png">
     </head>
     <body class="bg-[#0C0C1C] text-[#A3B5CD] p-2 sm:p-4 min-h-screen h-[100vh] flex flex-col">
         <!-- HEADER -->
