--- a/src/frontend/login.html
+++ b/src/frontend/login.html
@@ -6,6 +6,8 @@
     <title>MentorIA - Login</title>
     <link href="https://cdn.boxicons.com/fonts/basic/boxicons.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="css/style.css">
+    <link rel="shortcut icon" href="assets/svg/logo.svg" type="image/x-png">
+
 </head>
 <body class="bg-[#0C0C1C] text-[#A3B5CD] p-4 min-h-screen flex flex-col justify-center">
     <!-- Header -->
