--- a/src/frontend/index.html
+++ b/src/frontend/index.html
@@ -15,9 +15,9 @@
     <body class="bg-[#0C0C1C] text-[#A3B5CD] p-2 sm:p-4 min-h-screen h-[100vh] flex flex-col">
         <!-- HEADER -->
         <header data-aos="fade-up" data-aos-delay="300" class="flex sm:flex-row justify-between items-center gap-4 p-4 bg-[#464973] rounded-lg">
-            <a href="#" class="flex items-center gap-2">
+            <a href="index.html" class="flex items-center gap-2">
                 <img src="assets/svg/logo.svg" alt="Logo" class="size-10" />
-                <h1 class="font-black text-2xl">MentorIA</h1>
+                <h1 class="font-black hidden sm:flex text-2xl">MentorIA</h1>
             </a>
             <nav>
                 <ul class="flex gap-4 sm:gap-6">
@@ -56,7 +56,7 @@
                 </div>
 
                 <!-- Botón GitHub -->
-                <a data-aos="fade-up" data-aos-delay="700"href="https://github.com/LuisangelSS/MentorIA-/" target="_blank" rel="noopener noreferrer" class="flex items-center justify-center gap-2 p-3  bg-[#8E94E5] text-[#161B32] rounded-lg hover:bg-[#7b82d9] transition-colors w-full sm:w-80 mx-auto mb-10">
+                <a href="https://github.com/LuisangelSS/MentorIA-/" target="_blank" rel="noopener noreferrer" class="flex items-center justify-center gap-2 p-3  bg-[#8E94E5] text-[#161B32] rounded-lg hover:bg-[#7b82d9] transition-colors w-full sm:w-80 mx-auto mb-10">
                     <img src="assets/svg/github-mark.svg" alt="GitHub Logo" class="w-5 h-5" />
                     <span class="font-bold">Star this project on GitHub</span>
                 </a>
