(feat):  Funcionalidad y botón para "Perfil"

--- a/src/frontend/app.html
+++ b/src/frontend/app.html
@@ -55,7 +55,7 @@
                         <span class="text-xs sm:text-sm">Configuración</span>
                     </button>
                     
-                    <button class="flex items-center gap-3 p-3 bg-[#2e3159] rounded-lg hover:bg-[#3a4066] transition-all duration-300 hover:scale-105 transform w-full text-left">
+                    <button id="profile-btn" class="flex items-center gap-3 p-3 bg-[#2e3159] rounded-lg hover:bg-[#3a4066] transition-all duration-300 hover:scale-105 transform w-full text-left">
                         <i class='bx bx-user-circle text-lg sm:text-xl text-[#A3B5CD]'></i>
                         <span class="text-xs sm:text-sm">Perfil</span>
                     </button>
