(refactor) Correciones de responsives en pantallas

--- a/src/frontend/login.html
+++ b/src/frontend/login.html
@@ -19,13 +19,13 @@
             <a href="index.html"><img src="assets/svg/MentorIA-logo.svg" alt="Logo MentorIA" class="w-30 sm:hidden"></a>
         </div>
         <!-- Header -->
-        <header data-aos="fade-up" data-aos-delay="300" class="text-center mt-10 mb-10">
+        <header data-aos="fade-up" data-aos-delay="300" class="text-center mt-5 mb-5">
             <h1 class="text-5xl 2xl:text-8xl text-white font-bold">¡Estás de vuelta!</h1>
             <p class="text-3xl 2xl:text-5xl mt-2 text-[#8E94E5] font-bold">¿Qué vamos a aprender hoy?</p>
         </header>
 
         <!-- Contenedor Login + Imagen -->
-        <div data-aos="fade-up" data-aos-delay="300" class="flex flex-col sm:flex-row items-center justify-center gap-12 w-[90%] max-w-6xl mx-auto">
+        <div data-aos="fade-up" data-aos-delay="300" class="flex flex-col sm:flex-row items-center justify-center gap-12 w-[90%]  mx-auto">
             <!-- Formulario -->
             <div class="w-[22rem] 2xl:w-[26rem] bg-[#0C0C1C] border rounded-2xl p-6 shadow-lg">
                 <h2 class="mb-5 font-black text-3xl text-white">Iniciar sesión</h2>
@@ -58,7 +58,7 @@
             <!-- Imagen / Logo -->
             <div class="sm:flex justify-center hidden">
                 <a href="index.html">
-                    <img class="2xl:w-[30rem]  " src="assets/svg/MentorIA-logo.svg" alt="MentorIA logo" />
+                    <img class="w-[300px]  " src="assets/svg/MentorIA-logo.svg" alt="MentorIA logo" />
                 </a>
             </div>
         </div>
