--- a/src/frontend/registro.html
+++ b/src/frontend/registro.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -15,8 +15,8 @@
     </head>
     <body class="bg-[#0C0C1C] text-[#A3B5CD] p-2 sm:p-4 min-h-screen flex flex-col items-center">
         <!-- Header  -->
-        <header class="w-full max-w-[1200px] text-center px-4 mt-6 sm:mt-10">
-            <h1 data-aos="fade-up" data-aos-delay="300" class="text-3xl sm:text-4xl md:text-5xl lg:text-6xl 2xl:text-7xl text-white">
+        <header class="w-full text-center px-4 mt-1 sm:mt-1">
+            <h1 data-aos="fade-up" data-aos-delay="300" class="text-5xl sm:text-2xl md:text-3xl lg:text-5xl 2xl:text-6xl text-white">
                 Estás a
                 <span class="font-bold text-[#8E94E5]">un paso</span>
                 de
@@ -27,44 +27,44 @@
         </header>
 
         <!-- Registro + Imagen -->
-        <div  class="flex flex-col lg:flex-row items-center justify-center w-full max-w-[1200px] gap-6 lg:gap-10 mt-8 lg:mt-10 px-4">
-            <div class="mb-6 lg:mb-0">
+        <div  class="flex flex-col lg:flex-row items-center justify-center w-full max-w-[1200px] gap-6 lg:gap-10 mt-4 lg:mt-10 px-4">
+            <div class="">
                 <a href="index.html">
                     <img data-aos="fade-up" data-aos-delay="300" class="w-40 sm:w-52 md:w-60 lg:w-72 2xl:w-96" src="assets/svg/MentorIA-logo.svg" alt="Logo MentorIA" />
                 </a>
             </div>
 
-            <div data-aos="fade-up" data-aos-delay="300" class="w-full max-w-md bg-[#464973] border border-gray-700 rounded-2xl p-6">
-                <h2 class="font-black text-2xl sm:text-3xl md:text-4xl text-white mb-4">Registrarse</h2>
+            <div data-aos="fade-up" data-aos-delay="300" class="w-full max-w-md bg-[#0C0C1C] border-2 border-gray-700 rounded-2xl p-6">
+                <h2 class="font-black text-2xl sm:text-3xl md:text-3xl text-white mb-4">Registrarse</h2>
 
                 <!-- Mensaje de estado --> 
-                <div id="message" class="hidden mb-4 p-3 rounded-lg text-center font-bold"></div>
+                <div id="message" class="hidden p-3 rounded-lg text-center font-bold"></div>
                 
-                <form  id="registerForm" class="flex flex-col gap-3">
+                <form  id="registerForm" class="flex flex-col gap-1">
                     <label class="font-bold" for="username">
                         Nombre de usuario
-                        <input type="text" name="username" id="username" placeholder="Tu nombre de usuario" class="mt-1 sm:p-2 p-3 bg-[#0C0C1C] rounded-lg border border-gray-500 text-white w-full" required />
+                        <input type="text" name="username" id="username" placeholder="Tu nombre de usuario" class="mt-1 sm:p-2 p-2 bg-[#0C0C1C] rounded-lg border border-gray-500 text-white w-full" required />
                     </label>
 
                     <label class="font-bold" for="email">
                         Email
-                        <input type="email" name="email" id="email" placeholder="ejemplo@gmail.com" class="mt-1 sm:p-2 p-3 bg-[#0C0C1C] rounded-lg border border-gray-500 text-white w-full" required />
+                        <input type="email" name="email" id="email" placeholder="ejemplo@gmail.com" class="mt-1 sm:p-2 p-2 bg-[#0C0C1C] rounded-lg border border-gray-500 text-white w-full" required />
                     </label>
 
                     <label class="font-bold" for="password">
                         Contraseña
-                        <input type="password" name="password" id="password" placeholder="****************" class="mt-1 sm:p-2 p-3 bg-[#0C0C1C] rounded-lg border border-gray-500 text-white w-full" required minlength="6" />
+                        <input type="password" name="password" id="password" placeholder="****************" class="mt-1 sm:p-2 p-2 bg-[#0C0C1C] rounded-lg border border-gray-500 text-white w-full" required minlength="6" />
                     </label>
 
-                    <div class="flex items-center mt-2 mb-2">
+                    <div class="flex items-center mt-1 mb-1">
                         <input type="checkbox" name="terms" id="terms" required class="mr-2" />
                         <label for="terms" class="text-sm sm:text-base">Aceptar términos y condiciones.</label>
                     </div>
 
-                    <button type="submit" id="submitBtn" class="mt-3 sm:mt-4 p-3 sm:p-4 bg-white text-[#0C0C1C] font-black text-lg sm:text-xl rounded-xl hover:bg-gray-300 disabled:opacity-50 disabled:cursor-not-allowed">Crear cuenta</button>
+                    <button type="submit" id="submitBtn" class="mt-2 sm:mt-2 p-1 sm:p-2 bg-white text-[#0C0C1C] font-black text-lg sm:text-xl rounded-xl hover:bg-gray-300 disabled:opacity-50 disabled:cursor-not-allowed">Crear cuenta</button>
                 </form>
 
-                <div  class="flex justify-center mt-3 sm:mt-4 text-sm sm:text-base">
+                <div  class="flex justify-center mt-1 sm:mt-2 text-sm sm:text-base">
                     <a class="text-white" href="login.html">
                         ¿Ya tienes una sesión?
                         <span class="font-bold">Clica aquí</span>
