(fix): Mejorando logica para las rutas dinamicas

--- a/src/frontend/login.html
+++ b/src/frontend/login.html
@@ -7,16 +7,16 @@
         <link href="https://cdn.boxicons.com/fonts/basic/boxicons.min.css" rel="stylesheet" />
         <link rel="stylesheet" href="css/style.css" />
         <link rel="shortcut icon" href="assets/svg/logo.svg" type="image/x-png" />
-        <script src="../backend/login.js"></script>
+        <script src="js/login.js"></script>
         <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
-        <script src="../backend/assets/particles.js"></script>
+        <script src="assets/particles.js"></script>
         <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
         <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     </head>
     <body class="bg-[#0C0C1C] text-[#A3B5CD] p-4  flex flex-col justify-center">
         
         <div data-aos="fade-up" data-aos-delay="300" class="mx-auto">
-            <a href="index.html"><img src="assets/svg/MentorIA-logo.svg" alt="Logo MentorIA" class="w-30 sm:hidden"></a>
+            <a href="/"><img src="assets/svg/MentorIA-logo.svg" alt="Logo MentorIA" class="w-30 sm:hidden"></a>
         </div>
         <!-- Header -->
         <header data-aos="fade-up" data-aos-delay="300" class="text-center mt-5 mb-5">
@@ -48,7 +48,7 @@
                 </form>
 
                 <div class="flex justify-center mt-3">
-                    <a class="text-white" href="registro.html">
+                    <a class="text-white" href="/register">
                         ¿No tienes una cuenta?
                         <span class="font-bold">Crear una.</span>
                     </a>
@@ -57,7 +57,7 @@
 
             <!-- Imagen / Logo -->
             <div class="sm:flex justify-center hidden">
-                <a href="index.html">
+                <a href="/">
                     <img class="w-[300px]  " src="assets/svg/MentorIA-logo.svg" alt="MentorIA logo" />
                 </a>
             </div>
