--- a/src/frontend/profile.html
+++ b/src/frontend/profile.html
@@ -8,7 +8,7 @@
         <link rel="stylesheet" href="css/style.css" />
         <link rel="shortcut icon" href="assets/svg/logo.svg" type="image/x-png" />
         <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
-        <script src="../backend/assets/particles.js"></script>
+        <script src="assets/particles.js"></script>
     </head>
     <body class="bg-[#0C0C1C] text-[#A3B5CD] p-2 sm:p-4 min-h-screen">
         <main class="animate-fadeIn">
@@ -128,6 +128,6 @@
                 window.location.href = "app.html";
             }
         </script>
-        <script src="../backend/profile.js"></script>
+        <script src="js/profile.js"></script>
     </body>
 </html>
