--- a/src/frontend/registro.html
+++ b/src/frontend/registro.html
@@ -29,7 +29,7 @@
         <!-- Registro + Imagen -->
         <div  class="flex flex-col lg:flex-row items-center justify-center w-full max-w-[1200px] gap-6 lg:gap-10 mt-4 lg:mt-10 px-4">
             <div class="">
-                <a href="index.html">
+                <a href="/">
                     <img data-aos="fade-up" data-aos-delay="300" class="w-40 sm:w-52 md:w-60 lg:w-72 2xl:w-96" src="assets/svg/MentorIA-logo.svg" alt="Logo MentorIA" />
                 </a>
             </div>
@@ -65,7 +65,7 @@
                 </form>
 
                 <div  class="flex justify-center mt-1 sm:mt-2 text-sm sm:text-base">
-                    <a class="text-white" href="login.html">
+                    <a class="text-white" href="/login">
                         ¿Ya tienes una sesión?
                         <span class="font-bold">Clica aquí</span>
                     </a>
@@ -74,6 +74,6 @@
         </div>
         <div id="particles-js" class="absolute top-0 left-0 w-full h-full -z-10"></div>
     </body>
-    <script src="../backend/registro.js"></script>
+    <script src="js/registro.js"></script>
     <script>AOS.init()</script>
 </html>
