--- a/src/frontend/app.html
+++ b/src/frontend/app.html
@@ -8,7 +8,7 @@
         <link rel="stylesheet" href="css/style.css" />
         <link rel="shortcut icon" href="assets/svg/logo.svg" type="image/x-png" />
         <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
-        <script src="../backend/assets/particles.js"></script>
+        <script src="assets/particles.js"></script>
     </head>
     <body class="bg-[#0C0C1C] text-[#A3B5CD] p-2 sm:p-2 h-screen">
         <main class="animate-fadeIn">
@@ -83,8 +83,8 @@
                             </form>
                         </div>
                     </div>
-                    <script src="../backend/script.js"></script>
-                    <script src="../backend/user.js"></script>
+                    <script src="js/script.js"></script>
+                    <script src="js/user.js"></script>
                 </div>
             </div>
             <div id="particles-js" class="absolute top-0 left-0 w-full h-full -z-10"></div>
