--- a/src/frontend/index.html
+++ b/src/frontend/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>MentorIA - Inicio</title>
         <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
-        <script src="../backend/assets/particles.js"></script>
+        <script src="assets/particles.js"></script>
         <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
         <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
         <link href="https://cdn.boxicons.com/fonts/basic/boxicons.min.css" rel="stylesheet" />
@@ -15,17 +15,17 @@
     <body class="bg-[#0C0C1C] text-[#A3B5CD] p-2 sm:p-4 min-h-screen h-[100vh] flex flex-col">
         <!-- HEADER -->
         <header data-aos="fade-up" data-aos-delay="300" class="flex sm:flex-row justify-between items-center gap-4 p-4 bg-[#464973] rounded-lg">
-            <a href="index.html" class="flex items-center gap-2">
+            <a href="/" class="flex items-center gap-2">
                 <img src="assets/svg/logo.svg" alt="Logo" class="size-10" />
                 <h1 class="font-black hidden sm:flex text-2xl">MentorIA</h1>
             </a>
             <nav>
                 <ul class="flex gap-4 sm:gap-6">
                     <li>
-                        <a class="p-2 px-6 rounded-lg border border-[#A3B5CD] text-center hover:bg-[#5b5f80] hover:text-white transition-colors" href="login.html">Iniciar sesión</a>
+                        <a class="p-2 px-6 rounded-lg border border-[#A3B5CD] text-center hover:bg-[#5b5f80] hover:text-white transition-colors" href="/login">Iniciar sesión</a>
                     </li>
                     <li>
-                        <a class="p-2 px-6 rounded-lg border border-[#A3B5CD] bg-[#161B32] text-center hover:bg-[#8E94E5] hover:text-[#161B32] transition-colors" href="registro.html">Registrarse</a>
+                        <a class="p-2 px-6 rounded-lg border border-[#A3B5CD] bg-[#161B32] text-center hover:bg-[#8E94E5] hover:text-[#161B32] transition-colors" href="/register">Registrarse</a>
                     </li>
                 </ul>
             </nav>
@@ -51,8 +51,8 @@
 
                 <!-- Botones principales -->
                 <div data-aos="fade-up" data-aos-delay="600" class="flex flex-col sm:flex-row gap-4 w-full sm:w-auto items-center justify-center mx-auto">
-                    <a href="login.html" class="w-full sm:w-48 p-3 bg-[#161B32] text-[#A3B5CD] border rounded-lg text-center hover:bg-[#1f233c] hover:text-white transition-colors">Iniciar sesión</a>
-                    <a href="registro.html" class="w-full sm:w-48 p-3 text-[#A3B5CD] border rounded-lg text-center hover:bg-[#8E94E5] hover:text-[#161B32] transition-colors">Registrarse</a>
+                    <a href="/login" class="w-full sm:w-48 p-3 bg-[#161B32] text-[#A3B5CD] border rounded-lg text-center hover:bg-[#1f233c] hover:text-white transition-colors">Iniciar sesión</a>
+                    <a href="/register" class="w-full sm:w-48 p-3 text-[#A3B5CD] border rounded-lg text-center hover:bg-[#8E94E5] hover:text-[#161B32] transition-colors">Registrarse</a>
                 </div>
 
                 <!-- Botón GitHub -->
