(refactor): Segunda version quizzes.html fully resposnive

--- a/src/frontend/quizzes.html
+++ b/src/frontend/quizzes.html
@@ -20,10 +20,10 @@
             </div>
 
             <div class="p-3 px-6 rounded-lg bg-[#161B32] flex flex-col gap-10">
-                <h1 class="mt-10 font-bold text-5xl text-white text-center">Genera un Quizz con IA</h1>
-                <h2 class="text-white font-bold text-xl text-center">del tema de preferencia que quieras.</h2>
+                <h1 class="mt-10 font-bold text-5xl lg:text-6xl 2xl:text-8xl text-white text-center">Genera un Quizz con IA</h1>
+                <h2 class="text-white font-bold text-xl lg:text-2xl 2xl:text-3xl text-center">del tema de preferencia que quieras.</h2>
                 <div class="flex justify-center">
-                    <form action="" method="post" class="w-full max-w-2xl">
+                    <form action="" method="post" class="w-full max-w-3xl">
                         <div class="bg-[#464973] rounded-full w-full">
                             <input type="text" placeholder="Escribe el tema aquí" class="outline-none w-full p-6 bg-transparent text-xl text-white" />
                         </div>
@@ -31,41 +31,29 @@
                 </div>
                 <h2 class="font-black text-4xl text-white text-center">Quizzes recientes</h2>
 
-                <div class="grid grid-cols-3 gap-4">
+                <div class="grid grid-cols-2 gap-4 md:grid-cols-3 2xl:grid-cols-4">
                     <div class="bg-[#464973] p-4 rounded-lg">
-                        <h3 class="font-black text-white text-3xl mb-4">Primera Guerra Mundial y Segunda</h3>
+                        <h3 class="font-black text-white text-2xl md:text-3xl xl:text-4xl mb-4">Primera Guerra Mundial y Segunda</h3>
                         <div class="bg-[#161B32] p-2 rounded-lg font-bold text-white text-center">10 PREGUNTAS</div>
                     </div>
                     <div class="bg-[#464973] p-4 rounded-lg">
-                        <h3 class="font-black text-white text-3xl mb-4">Primera Guerra Mundial y Segunda</h3>
+                        <h3 class="font-black text-white text-2xl md:text-3xl xl:text-4xl mb-4">Primera Guerra Mundial y Segunda</h3>
                         <div class="bg-[#161B32] p-2 rounded-lg font-bold text-white text-center">10 PREGUNTAS</div>
                     </div>
                     <div class="bg-[#464973] p-4 rounded-lg">
-                        <h3 class="font-black text-white text-3xl mb-4">Primera Guerra Mundial y Segunda</h3>
+                        <h3 class="font-black text-white text-2xl md:text-3xl xl:text-4xl mb-4">Primera Guerra Mundial y Segunda</h3>
                         <div class="bg-[#161B32] p-2 rounded-lg font-bold text-white text-center">10 PREGUNTAS</div>
                     </div>
                     <div class="bg-[#464973] p-4 rounded-lg">
-                        <h3 class="font-black text-white text-3xl mb-4">Primera Guerra Mundial y Segunda</h3>
+                        <h3 class="font-black text-white text-2xl md:text-3xl xl:text-4xl mb-4">Primera Guerra Mundial y Segunda</h3>
                         <div class="bg-[#161B32] p-2 rounded-lg font-bold text-white text-center">10 PREGUNTAS</div>
                     </div>
                     <div class="bg-[#464973] p-4 rounded-lg">
-                        <h3 class="font-black text-white text-3xl mb-4">Primera Guerra Mundial y Segunda</h3>
+                        <h3 class="font-black text-white text-2xl md:text-3xl xl:text-4xl mb-4">Primera Guerra Mundial y Segunda</h3>
                         <div class="bg-[#161B32] p-2 rounded-lg font-bold text-white text-center">10 PREGUNTAS</div>
                     </div>
                     <div class="bg-[#464973] p-4 rounded-lg">
-                        <h3 class="font-black text-white text-3xl mb-4">Primera Guerra Mundial y Segunda</h3>
-                        <div class="bg-[#161B32] p-2 rounded-lg font-bold text-white text-center">10 PREGUNTAS</div>
-                    </div>
-                    <div class="bg-[#464973] p-4 rounded-lg">
-                        <h3 class="font-black text-white text-3xl mb-4">Primera Guerra Mundial y Segunda</h3>
-                        <div class="bg-[#161B32] p-2 rounded-lg font-bold text-white text-center">10 PREGUNTAS</div>
-                    </div>
-                    <div class="bg-[#464973] p-4 rounded-lg">
-                        <h3 class="font-black text-white text-3xl mb-4">Primera Guerra Mundial y Segunda</h3>
-                        <div class="bg-[#161B32] p-2 rounded-lg font-bold text-white text-center">10 PREGUNTAS</div>
-                    </div>
-                    <div class="bg-[#464973] p-4 rounded-lg">
-                        <h3 class="font-black text-white text-3xl mb-4">Primera Guerra Mundial y Segunda</h3>
+                        <h3 class="font-black text-white text-2xl md:text-3xl xl:text-4xl mb-4">Primera Guerra Mundial y Segunda</h3>
                         <div class="bg-[#161B32] p-2 rounded-lg font-bold text-white text-center">10 PREGUNTAS</div>
                     </div>
                 </div>
