--- a/src/frontend/quizzes.html
+++ b/src/frontend/quizzes.html
@@ -30,31 +30,32 @@
                     </form>
                 </div>
                 <h2 class="font-black text-4xl text-white text-center">Quizzes recientes</h2>
-
-                <div class="grid grid-cols-2 gap-4 md:grid-cols-3 2xl:grid-cols-4">
-                    <div class="bg-[#464973] p-4 rounded-lg">
-                        <h3 class="font-black text-white text-2xl md:text-3xl xl:text-4xl mb-4">Primera Guerra Mundial y Segunda</h3>
-                        <div class="bg-[#161B32] p-2 rounded-lg font-bold text-white text-center">10 PREGUNTAS</div>
-                    </div>
-                    <div class="bg-[#464973] p-4 rounded-lg">
-                        <h3 class="font-black text-white text-2xl md:text-3xl xl:text-4xl mb-4">Primera Guerra Mundial y Segunda</h3>
-                        <div class="bg-[#161B32] p-2 rounded-lg font-bold text-white text-center">10 PREGUNTAS</div>
-                    </div>
-                    <div class="bg-[#464973] p-4 rounded-lg">
-                        <h3 class="font-black text-white text-2xl md:text-3xl xl:text-4xl mb-4">Primera Guerra Mundial y Segunda</h3>
-                        <div class="bg-[#161B32] p-2 rounded-lg font-bold text-white text-center">10 PREGUNTAS</div>
-                    </div>
-                    <div class="bg-[#464973] p-4 rounded-lg">
-                        <h3 class="font-black text-white text-2xl md:text-3xl xl:text-4xl mb-4">Primera Guerra Mundial y Segunda</h3>
-                        <div class="bg-[#161B32] p-2 rounded-lg font-bold text-white text-center">10 PREGUNTAS</div>
-                    </div>
-                    <div class="bg-[#464973] p-4 rounded-lg">
-                        <h3 class="font-black text-white text-2xl md:text-3xl xl:text-4xl mb-4">Primera Guerra Mundial y Segunda</h3>
-                        <div class="bg-[#161B32] p-2 rounded-lg font-bold text-white text-center">10 PREGUNTAS</div>
-                    </div>
-                    <div class="bg-[#464973] p-4 rounded-lg">
-                        <h3 class="font-black text-white text-2xl md:text-3xl xl:text-4xl mb-4">Primera Guerra Mundial y Segunda</h3>
-                        <div class="bg-[#161B32] p-2 rounded-lg font-bold text-white text-center">10 PREGUNTAS</div>
+                <div class="flex flex-col items-center">
+                    <div class="grid grid-cols-2 gap-4 md:grid-cols-3 2xl:grid-cols-4 max-w-[1300px]">
+                        <div class="bg-[#464973] p-4 rounded-lg">
+                            <h3 class="font-black text-white text-2xl md:text-3xl xl:text-4xl mb-4">Primera Guerra Mundial y Segunda</h3>
+                            <div class="bg-[#161B32] p-2 rounded-lg font-bold text-white text-center">10 PREGUNTAS</div>
+                        </div>
+                        <div class="bg-[#464973] p-4 rounded-lg">
+                            <h3 class="font-black text-white text-2xl md:text-3xl xl:text-4xl mb-4">Primera Guerra Mundial y Segunda</h3>
+                            <div class="bg-[#161B32] p-2 rounded-lg font-bold text-white text-center">10 PREGUNTAS</div>
+                        </div>
+                        <div class="bg-[#464973] p-4 rounded-lg">
+                            <h3 class="font-black text-white text-2xl md:text-3xl xl:text-4xl mb-4">Primera Guerra Mundial y Segunda</h3>
+                            <div class="bg-[#161B32] p-2 rounded-lg font-bold text-white text-center">10 PREGUNTAS</div>
+                        </div>
+                        <div class="bg-[#464973] p-4 rounded-lg">
+                            <h3 class="font-black text-white text-2xl md:text-3xl xl:text-4xl mb-4">Primera Guerra Mundial y Segunda</h3>
+                            <div class="bg-[#161B32] p-2 rounded-lg font-bold text-white text-center">10 PREGUNTAS</div>
+                        </div>
+                        <div class="bg-[#464973] p-4 rounded-lg">
+                            <h3 class="font-black text-white text-2xl md:text-3xl xl:text-4xl mb-4">Primera Guerra Mundial y Segunda</h3>
+                            <div class="bg-[#161B32] p-2 rounded-lg font-bold text-white text-center">10 PREGUNTAS</div>
+                        </div>
+                        <div class="bg-[#464973] p-4 rounded-lg">
+                            <h3 class="font-black text-white text-2xl md:text-3xl xl:text-4xl mb-4">Primera Guerra Mundial y Segunda</h3>
+                            <div class="bg-[#161B32] p-2 rounded-lg font-bold text-white text-center">10 PREGUNTAS</div>
+                        </div>
                     </div>
                 </div>
             </div>
