--- a/src/frontend/app.html
+++ b/src/frontend/app.html
@@ -7,19 +7,31 @@
         <link href="https://cdn.boxicons.com/fonts/basic/boxicons.min.css" rel="stylesheet" />
         <link rel="stylesheet" href="css/style.css" />
         <link rel="shortcut icon" href="assets/svg/logo.svg" type="image/x-png" />
+        <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
+        <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+
         <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
         <script src="assets/particles.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/dompurify@3.1.7/dist/purify.min.js"></script>
     </head>
     <body class="bg-background text-text p-2 sm:p-2 h-screen">
         <main class="animate-fadeIn">
-            <div class="bg-secondary rounded-lg h-14 sm:h-16 lg:h-[7vh] flex items-center px-3 sm:px-4 border border-text animate-slideInLeft">
-                <img src="assets/svg/logo.svg" alt="Logo de MentorIA" class="h-full" />
-                <img />
-                <h2 class="font-black text-lg sm:text-xl lg:text-2xl ml-2 sm:ml-3">MentorIA</h2>
+            <div class="bg-secondary rounded-lg flex justify-between items-center px-3 sm:px-4  animate-slideInLeft">
+                <div class="h-14 sm:h-16 lg:h-[7vh] flex items-center">
+                    <img src="assets/svg/logo.svg" alt="Logo de MentorIA" class="h-full" />
+                    <img />
+                    <h2 class="font-black text-lg sm:text-xl lg:text-2xl ml-2 sm:ml-3">MentorIA</h2>
+                </div>
+                <div>
+                    <button id="toggleMode" class="rounded-full bg-background-light p-2">
+                        <i class="bx bx-highlights"></i>
+                    </button>
+                </div>
             </div>
 
             <div class="flex flex-col lg:flex-row gap-3 sm:gap-5 mt-3 min-h-[calc(100vh-120px)] lg:h-[87vh]">
-                <div class="bg-secondary w-full lg:w-[15vw] lg:min-w-[250px] rounded-lg p-3 sm:p-4 flex flex-col gap-2 border border-text animate-slideInLeft order-2 lg:order-1">
+                <div class="bg-secondary w-full lg:w-[15vw] lg:min-w-[250px] rounded-lg p-3 sm:p-4 flex flex-col gap-2  animate-slideInLeft order-2 lg:order-1">
                     <a href="#" class="flex rounded-lg bg-background-light w-full p-3 hover:bg-[#2e3159] transition-all duration-300 hover:scale-105 transform">
                         <i class="bx bx-home text-lg sm:text-xl pr-2"></i>
                         <p class="text-sm sm:text-base">Inicio</p>
@@ -35,15 +47,15 @@
 
                     <h3 class="font-bold text-sm sm:text-base mt-2">Configuración de cuenta</h3>
                     <div class="h-full bg-background-light rounded-xl p-3 sm:p-4 flex flex-col gap-3 custom-scrollbar">
-                    <div id="account-card" role="button" tabindex="0" title="Ver perfil" class="flex items-center gap-3 p-3 bg-[#2e3159] rounded-lg hover:bg-[#3a4066] transition-all duration-300 hover:scale-105 transform cursor-pointer">
-                        <div class="w-8 h-8 sm:w-10 sm:h-10 bg-secondary rounded-full flex items-center justify-center">
-                            <i class='bx bx-user text-text text-lg sm:text-xl'></i>
+                        <div id="account-card" role="button" tabindex="0" title="Ver perfil" class="flex items-center gap-3 p-3 bg-[#2e3159] rounded-lg hover:bg-[#3a4066] transition-all duration-300 hover:scale-105 transform cursor-pointer">
+                            <div class="w-8 h-8 sm:w-10 sm:h-10 bg-secondary rounded-full flex items-center justify-center">
+                                <i class="bx bx-user text-text text-lg sm:text-xl"></i>
+                            </div>
+                            <div class="flex-1 min-w-0">
+                                <p id="user-name" class="text-xs sm:text-sm font-medium text-text truncate">Cargando...</p>
+                                <p id="user-email" class="text-xs text-text-muted truncate">Cargando...</p>
+                            </div>
                         </div>
-                        <div class="flex-1 min-w-0">
-                            <p id="user-name" class="text-xs sm:text-sm font-medium text-text truncate">Cargando...</p>
-                            <p id="user-email" class="text-xs text-text-muted truncate">Cargando...</p>
-                        </div>
-                    </div>
 
                         <button id="logout-btn" class="flex items-center gap-3 p-3 bg-red-900/30 rounded-lg hover:bg-red-800/40 transition-all duration-300 hover:scale-105 transform w-full text-left mt-auto">
                             <i class="bx bx-log-out text-lg sm:text-xl text-red-400"></i>
@@ -52,7 +64,7 @@
                     </div>
                 </div>
 
-                <div class="bg-background-light w-full lg:w-[85vw] rounded-lg p-3 sm:p-4 flex flex-col gap-5 border border-text animate-slideInRight order-1 lg:order-2">
+                <div class="bg-background-light w-full lg:w-[85vw] rounded-lg p-3 sm:p-4 flex flex-col gap-5  animate-slideInRight order-1 lg:order-2">
                     <div class="rounded-xl flex-1 flex flex-col justify-center items-center animate-fadeIn overflow-auto">
                         <div class="">
                             <div id="chat-logo" class="">
@@ -64,7 +76,7 @@
                     </div>
 
                     <div class="sticky bottom-0 flex justify-center animate-fadeIn">
-                        <div class="w-full max-w-2xl bg-secondary rounded-2xl shadow-lg border border-text/20">
+                        <div class="w-full max-w-2xl bg-secondary rounded-2xl shadow-lg /20">
                             <form action="#" method="post" class="flex items-center p-3 sm:p-4">
                                 <input type="text" placeholder="Escribe tu pregunta aquí..." class="flex-1 bg-transparent outline-none text-text placeholder-text/70 text-sm sm:text-base px-2" />
                                 <button type="submit" class="ml-3 p-2 bg-background-light rounded-xl hover:bg-[#2e3159] transition-all duration-300 hover:scale-110 transform">
@@ -81,6 +93,13 @@
         </main>
         <script>
             AOS.init();
+
+            const toggleMode = document.querySelector("#toggleMode");
+            const html = document.querySelector("html");
+
+            toggleMode.addEventListener("click", () => {
+                html.classList.toggle("dark");
+            });
         </script>
     </body>
 </html>
